--- a/menu.css
+++ b/menu.css
@@ -1,26 +1,30 @@
-.menus{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 20px;
+.menus {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  /* gap: 10px; */
 }
 
-.active-option{
-        background-color: #d0d8e0;
-        padding: 5px 10px;
+.active-option {
+  background-color: #d0d8e0;
+  /* padding: 5px 10px; */
 }
 
-.menus>div{
-        padding: 5px 10px;
-        cursor: pointer;
-        transition: 0.5s;
-        border-radius: 5px;
+.menus > div {
+  padding: 0px 5px;
+  cursor: pointer;
+  transition: 0.5s;
+  border-radius: 5px;
 }
 
-.menus>div:hover{
-        padding: 5px 10px;
-        cursor: pointer;
-        transition: 0.5s;
-        background-color: #d0d8e0;
-
+.menus > div:hover {
+  cursor: pointer;
+  transition: 0.5s;
+  background-color: #d0d8e0;
 }
+
+.material-icons {
+  transform: scale(0.7);
+}
+
+
